...
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>
...
