...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingRight="10dp">

    <Button
        android:id="@+id/button"
        style="@style/Toolbar.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:textAllCaps="false" />

</FrameLayout>
...
